--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="root"></div>
     <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text">
+      const root = document.getElementById("root");
+      const App = () => {
+        const [count, setCount] = React.useState(0);
+        const onClick = ()=>{
+          setCount(count+1);
+        }
+          <div>
+            <h1>Total click : {count}</h1>
+            <button onClick={onClick}>Click</button>
+          </div>
+      }
+      ReactDOM.render(<App />, root);
+    </script>
   </body>
 </html>
